sandc/test/fixtures/pbtRegression/shouldSucceed/explicitShadowing/use/Use.sand
use! int as Integer;

pub class Use {
    
}