sandc/test/fixtures/pbtRegression/shouldFail/implicitShadowing/staticProp/StaticProp.sand
pub class StaticProp {
    static sand: int = 2;
}